dark mode, made with love, fix piano width

--- a/src/style.css
+++ b/src/style.css
@@ -1,44 +1,69 @@
-:root {
+:root,
+:host,
+.sl-theme-light {
   --custom-font-display: 'Audiowide', sans-serif;
-  --sl-color-green-50: rgb(236 254 243);
-  --sl-color-green-100: rgb(188 250 211);
-  --sl-color-green-200: rgb(125 246 170);
-  --sl-color-green-300: rgb(29 237 106);
-  --sl-color-green-400: rgb(26 214 96);
-  --sl-color-green-500: rgb(22 184 82);
-  --sl-color-green-600: rgb(18 152 68);
-  --sl-color-green-700: rgb(15 125 56);
-  --sl-color-green-800: rgb(13 103 46);
-  --sl-color-green-900: rgb(9 74 33);
-  --sl-color-green-950: rgb(6 45 20);
-  --sl-color-primary-50: rgb(249 249 255);
-  --sl-color-primary-100: rgb(234 235 254);
-  --sl-color-primary-200: rgb(218 220 252);
-  --sl-color-primary-300: rgb(200 203 251);
-  --sl-color-primary-400: rgb(176 181 249);
+  --sl-color-green-50: #ecfef3;
+  --sl-color-green-100: #bcfad3;
+  --sl-color-green-200: #7df6aa;
+  --sl-color-green-300: #1ded6a;
+  --sl-color-green-400: #1ad660;
+  --sl-color-green-500: #16b852;
+  --sl-color-green-600: #129844;
+  --sl-color-green-700: #0f7d38;
+  --sl-color-green-800: #0d672e;
+  --sl-color-green-900: #094a21;
+  --sl-color-green-950: #062d14;
+  --sl-color-primary-50: #f9f9ff;
+  --sl-color-primary-100: #eaebfe;
+  --sl-color-primary-200: #d9dcfc;
+  --sl-color-primary-300: #c8cbfb;
+  --sl-color-primary-400: #b0b5f9;
   --sl-color-primary-500: #9197f7;
-  --sl-color-primary-600: rgb(111 118 245);
-  --sl-color-primary-700: rgb(78 88 242);
-  --sl-color-primary-800: rgb(47 58 240);
-  --sl-color-primary-900: rgb(23 33 191);
-  --sl-color-primary-950: rgb(15 21 121);
-  --sl-color-red-50: rgb(254 248 249);
-  --sl-color-red-100: rgb(253 231 236);
-  --sl-color-red-200: rgb(252 212 222);
-  --sl-color-red-300: rgb(250 191 205);
-  --sl-color-red-400: rgb(248 161 182);
-  --sl-color-red-500: rgb(245 119 150);
-  --sl-color-red-600: rgb(241 60 104);
-  --sl-color-red-700: rgb(211 26 71);
-  --sl-color-red-800: rgb(175 21 59);
-  --sl-color-red-900: rgb(127 15 42);
-  --sl-color-red-950: rgb(80 10 27);
+  --sl-color-primary-600: #6f76f5;
+  --sl-color-primary-700: #4e58f2;
+  --sl-color-primary-800: #2f3af0;
+  --sl-color-primary-900: #1721bf;
+  --sl-color-primary-950: #0f1579;
+  --sl-color-red-50: #fef8f9;
+  --sl-color-red-100: #fde7ec;
+  --sl-color-red-200: #fcd4de;
+  --sl-color-red-300: #fabfcd;
+  --sl-color-red-400: #f8a1b6;
+  --sl-color-red-500: #f57796;
+  --sl-color-red-600: #f13c68;
+  --sl-color-red-700: #d31a47;
+  --sl-color-red-800: #af153b;
+  --sl-color-red-900: #7f0f2a;
+  --sl-color-red-950: #500a1b;
   --sl-font-sans: 'Lexend', sans-serif;
+}
+
+.sl-theme-dark,
+:host {
+  --sl-color-primary-950: #f9f9ff;
+  --sl-color-primary-900: #eaebfe;
+  --sl-color-primary-800: #d9dcfc;
+  --sl-color-primary-700: #c8cbfb;
+  --sl-color-primary-600: #b0b5f9;
+  --sl-color-primary-500: #9197f7;
+  --sl-color-primary-400: #6f76f5;
+  --sl-color-primary-300: #4e58f2;
+  --sl-color-primary-200: #2f3af0;
+  --sl-color-primary-100: #1721bf;
+  --sl-color-primary-50: #191c47;
 }
 
 html,
 body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+body {
   background: var(--sl-color-primary-50);
+  padding: var(--sl-spacing-large) 0;
 }
 
 * {
@@ -51,7 +76,7 @@ body {
   }
 }
 
-#app {
+#grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(auto, 1fr);
@@ -66,17 +91,22 @@ body {
   }
 }
 
-h1 {
+div.heading {
+  display: flex;
+  justify-content: space-between;
   grid-column: span 2;
-  margin: 0;
-  font-family: var(--custom-font-display);
-  font-size: var(--sl-font-size-2x-large);
-  background: linear-gradient(
-    var(--sl-color-primary-600),
-    var(--sl-color-primary-950)
-  );
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+
+  & > h1 {
+    margin: 0;
+    font-family: var(--custom-font-display);
+    font-size: var(--sl-font-size-2x-large);
+    background: linear-gradient(
+      var(--sl-color-primary-600),
+      var(--sl-color-primary-950)
+    );
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
 
 sl-button {
@@ -138,14 +168,28 @@ p.result {
   & > sl-button {
     max-width: 50%;
   }
+}
 
-  & > custom-piano-keys.mobile {
-    display: none;
+p.made-with-love {
+  position: absolute;
+  bottom: var(--sl-spacing-x-large);
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+}
+
+div.switch-mode {
+  display: flex;
+  align-items: center;
+
+  & > sl-switch {
+    margin-left: var(--sl-spacing-x-small);
+    margin-right: var(--sl-spacing-3x-small);
   }
 }
 
 @media only screen and (width <= 800px) {
-  #app {
+  #grid {
     gap: var(--sl-spacing-3x-large) 0;
     width: 100%;
 
@@ -160,17 +204,5 @@ p.result {
 
   sl-option::part(label) {
     font-size: var(--sl-font-size-small);
-  }
-
-  .piano-container {
-    & > custom-piano-keys {
-      &.mobile {
-        display: unset;
-      }
-
-      &.desktop {
-        display: none;
-      }
-    }
   }
 }
